package com.bo.structuralPattern.adapter.interfaceAdapter;

public interface Controller {
}
