package com.bo.structuralPattern.adapter.interfaceAdapter.impl;

import com.bo.structuralPattern.adapter.interfaceAdapter.Controller;

public class OtherController implements Controller {
    public void doOther(){
        System.out.println("other");
    }
}
